--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,8 +7,8 @@ server.port=1313
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
  
 spring.datasource.url=jdbc:mysql://localhost:3306/spring_inventory
-spring.datasource.username=admin
-spring.datasource.password=1123456789
+spring.datasource.username=liempt
+spring.datasource.password=liempt
 
 spring.mvc.view.prefix =/WEB-INF/jsp/
 spring.mvc.view.suffix =.jsp
