Change using JPA

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,22 @@ server.port=1313
 # ===============================
 # DATABASE
 # ===============================
- 
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
  
 spring.datasource.url=jdbc:mysql://localhost:3306/spring_inventory
 spring.datasource.username=liempt
 spring.datasource.password=liempt
+
+# ===============================
+# JPA / HIBERNATE
+# =============================== 
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+# ===============================
+# VIEW RESOLVER
+# ===============================
 
 spring.mvc.view.prefix =/WEB-INF/jsp/
 spring.mvc.view.suffix =.jsp
