--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,12 @@
 			<version>4.1.1</version>
 		</dependency>
 		
+		<dependency>
+		    <groupId>com.google.cloud.sql</groupId>
+		    <artifactId>mysql-socket-factory</artifactId>
+		    <version>1.0.0</version>
+		</dependency>
+		
 		</dependencies>
 
 	<build>
