--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.datasource.username=liempt
 #spring.datasource.password=liempt
 ##### GOOGLE CLOUD #####
-spring.datasource.url=jdbc:mysql://google/spring_inventory?cloudSqlInstance=formidable-pact-141515:asia-east1:liempt&socketFactory=com.google.cloud.sql.mysql.SocketFactory&useSSL=false&user=root&password=liempt
+spring.datasource.url=jdbc:mysql://google/liempt?cloudSqlInstance=formidable-pact-141515:asia-east1:liempt&socketFactory=com.google.cloud.sql.mysql.SocketFactory&useSSL=false&user=root&password=liempt
 spring.datasource.username=root
 spring.datasource.password=liempt
 
