--- a/pom.xml
+++ b/pom.xml
@@ -87,11 +87,10 @@
 		</dependency>
 		
 		<dependency>
-		    <groupId>com.google.cloud.sql</groupId>
-		    <artifactId>mysql-socket-factory</artifactId>
-		    <version>1.0.0</version>
-		</dependency>
-		
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+        </dependency>
+  
 		</dependencies>
 
 	<build>
