- DB  + Add phone, city to Customer table  + Add price_sale, buy_date, create_date, update_date to Product table

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,27 +1,27 @@
 server.port=1313
 
-# ===============================
-# DATABASE MYSQL
-# ===============================
-#spring.datasource.url=jdbc:mysql://localhost:3306/spring_inventory
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.datasource.username=liempt
-#spring.datasource.password=liempt
-
-# ===============================
-# DATABASE POSTGRES
-# ===============================
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/spring_inventory
+## ===============================
+## DATABASE MYSQL
+## ===============================
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_inventory
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=liempt
 spring.datasource.password=liempt
-# Fix Postgres JPA Error:
-# Method org.postgresql.jdbc.PgConnection.createClob() is not yet implemented.
+
+## ===============================
+## DATABASE POSTGRES
+## ===============================
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost:5432/spring_inventory
+#spring.datasource.username=liempt
+#spring.datasource.password=liempt
+## Fix Postgres JPA Error:
+## Method org.postgresql.jdbc.PgConnection.createClob() is not yet implemented.
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults= false
 
-# ===============================
-# HEROKU POSTGRES
-# ===============================
+## ===============================
+## HEROKU POSTGRES
+## ===============================
 #spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.datasource.url=jdbc:postgresql://ec2-54-204-40-248.compute-1.amazonaws.com:5432/dbhdp4jf42d4go?sslmode=require
 #spring.datasource.username=ezfpruvvszrejb
