--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<packaging>war</packaging>
 
 	<name>SpringBootInventory</name>
-	<description>Project for Spring Boot Inventory</description>
+	<description>Liti Perfume Inventory</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -90,6 +90,11 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
         </dependency>
+        
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
   
 		</dependencies>
 
@@ -99,16 +104,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-			<plugin>
-		        <groupId>com.google.cloud.tools</groupId>
-		        <artifactId>appengine-maven-plugin</artifactId>
-		        <version>1.3.2</version>
-		        <configuration>
-		          <version>1</version>
-		        </configuration>
-		      </plugin>
 		</plugins>
 	</build>
-
 
 </project>
