--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,18 +3,18 @@ server.port=1313
 ## ===============================
 ## DATABASE MYSQL
 ## ===============================
-spring.datasource.url=jdbc:mysql://localhost:3306/spring_inventory
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.username=liempt
-spring.datasource.password=liempt
+#spring.datasource.url=jdbc:mysql://localhost:3306/spring_inventory
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.username=liempt
+#spring.datasource.password=liempt
 
 ## ===============================
 ## DATABASE POSTGRES
 ## ===============================
-#spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://localhost:5432/spring_inventory
-#spring.datasource.username=liempt
-#spring.datasource.password=liempt
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/spring_inventory
+spring.datasource.username=liempt
+spring.datasource.password=liempt
 ## Fix Postgres JPA Error:
 ## Method org.postgresql.jdbc.PgConnection.createClob() is not yet implemented.
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults= false
@@ -32,7 +32,8 @@ spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults= false
 # =============================== 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=none
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # ===============================
 # VIEW RESOLVER
